<resources>
    <string name="app_name">Formula one app</string>
    <string name="view_map">View map</string>
    <string name="open_input">Open input</string>
    <string name="path">Path</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="duration">Duration</string>
    <string name="intensity">Intensity</string>
    <string name="type">Type</string>
    <string name="summer">Summer</string>
    <string name="winter">Winter</string>
    <string name="add">Add</string>
    <string name="exit">Exit</string>
    <string name="camera_slider">Camera capture interval</string>
    <string name="audio_amplitude_slider">Audio amplitude interval</string>
    <string name="audio_scope_slider">Audio scope interval</string>
    <string name="audio_spectrum_slider">Audio spectrum interval</string>
    <string name="gyroscope_slider">Gyrscope interval</string>
    <string name="scope">Scope</string>
    <string name="camera">Camera</string>
    <string name="amplitude">Amplitude</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="save">Save</string>
    <string name="open_settings">Open settings</string>
    <string name="capture">Capture</string>
    <string name="stop">Stop</string>
    <string name="audio_slider">Audio slider</string>
    <string name="audio">Audio</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="simulate">Simulate</string>
</resources>