<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CaptureFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="69dp"
        tools:layout_editor_absoluteY="-40dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/side_margin">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineVertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="@dimen/guidelineVertical" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="@dimen/guidelineHorizontal" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/path"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_sensors_192" />

            <com.otaliastudios.cameraview.CameraView
                android:id="@+id/camera"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:keepScreenOn="true"
                app:layout_constraintBottom_toTopOf="@id/buttonStop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal" />


            <Button
                android:id="@+id/buttonStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/side_margin"
                android:layout_marginEnd="@dimen/side_margin"
                android:background="@drawable/button_primary"
                android:text="@string/start"
                app:layout_constraintEnd_toStartOf="@id/buttonStop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/camera" />

            <Button
                android:id="@+id/buttonStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/side_margin"
                android:layout_marginEnd="@dimen/side_margin"
                android:background="@drawable/button_error"
                android:drawableLeft="@drawable/ic_baseline_close_24"
                android:text="@string/stop"
                app:layout_constraintEnd_toEndOf="@id/buttonExit"
                app:layout_constraintStart_toEndOf="@id/buttonStart"
                app:layout_constraintTop_toBottomOf="@id/camera" />

            <Button
                android:id="@+id/buttonExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/side_margin"
                android:layout_marginEnd="@dimen/side_margin"
                android:background="@drawable/button_error"
                android:drawableLeft="@drawable/ic_baseline_close_24"
                android:text="@string/exit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/buttonStop"
                app:layout_constraintTop_toBottomOf="@id/camera" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>